# model-training-test

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  setup.sh
notebooks/: train.py
notebooks/__marimo__/session/: train.py.json
